# najm-course-api-surrealdb

./: .env.example  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  README.md  docker.nix  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: deploy.yml  test-build.yml
najm-course-apis/src/apps/: mod.rs
najm-course-core/: Cargo.toml
najm-course-core/src/: lib.rs  main.rs
najm-course-core/src/apps/v1/: mod.rs
najm-course-core/src/apps/v1/answers/: answers_schema.rs
najm-course-core/src/apps/v1/auth/: mod.rs
najm-course-core/src/apps/v1/docs/: docs_controller.rs
najm-course-core/src/apps/v1/options/: options_controller.rs  options_dto.rs
najm-course-core/src/apps/v1/permissions/: permissions_guard.rs  permissions_repository_test.rs
najm-course-core/src/apps/v1/questions/: mod.rs  questions_dto.rs  questions_repository.rs  questions_schema.rs  questions_service.rs
najm-course-core/src/apps/v1/roles/: roles_enum.rs
najm-course-core/src/apps/v1/tests/: mod.rs  tests_repository.rs
najm-course-core/src/v1/: mod.rs
najm-course-core/src/v1/answers/: answers_controller.rs  answers_controller_test.rs  answers_dto.rs  answers_repository.rs  answers_repository_test.rs  answers_schema.rs  answers_service.rs  mod.rs
najm-course-core/src/v1/auth/: auth_controller_test.rs
najm-course-core/src/v1/docs/: docs_controller.rs
najm-course-core/src/v1/flags/: flag_dto.rs  flag_repository.rs  flag_schema.rs  flag_service.rs  mod.rs
najm-course-core/src/v1/options/: mod.rs  options_controller.rs  options_controller_test.rs  options_dto.rs  options_repository.rs  options_repository_test.rs  options_schema.rs  options_service.rs
najm-course-core/src/v1/permissions/: permissions_controller_test.rs  permissions_enum.rs  permissions_guard.rs  permissions_repository_test.rs  permissions_service.rs
najm-course-core/src/v1/questions/: mod.rs  questions_controller.rs  questions_controller_test.rs  questions_dto.rs  questions_repository.rs  questions_repository_test.rs  questions_schema.rs  questions_service.rs
najm-course-core/src/v1/roles/: roles_controller_test.rs  roles_repository_test.rs
najm-course-core/src/v1/sessions/: mod.rs  sessions_controller_test.rs  sessions_dto.rs  sessions_repository.rs  sessions_repository_test.rs  sessions_schema.rs  sessions_service.rs
najm-course-core/src/v1/storage/: mod.rs  storage_controller.rs  storage_state.rs
najm-course-core/src/v1/tests/: mod.rs  tests_controller.rs  tests_controller_test.rs  tests_dto.rs  tests_repository.rs  tests_repository_test.rs  tests_schema.rs  tests_service.rs
najm-course-core/src/v1/users/: users_controller.rs  users_controller_test.rs  users_dto.rs  users_repository.rs  users_service.rs
najm-course-entities/: Cargo.toml
najm-course-entities/src/: lib.rs
najm-course-libs/: Cargo.toml
najm-course-libs/src/: lib.rs
najm-course-libs/src/axum/: mod.rs
najm-course-libs/src/jsonwebtoken/: mod.rs
najm-course-libs/src/minio/: mod.rs
najm-course-libs/src/surrealdb/: mod.rs  resource.rs
najm-course-utils/: Cargo.toml
najm-course-utils/src/: bind_filter.rs  extract_email.rs  generate_date.rs  generate_otp.rs  get_id.rs  make_thing.rs  mock_test.rs  query_list.rs  response_format.rs
src/: lib.rs  main.rs
src/apps/: mod.rs
src/apps/v1/: mod.rs
src/entities/: common_dto.rs  error_dto.rs  mod.rs
src/libs/: mod.rs
src/libs/argon/: mod.rs
src/libs/axum/: mod.rs
src/utils/: bind_filter.rs  extract_email.rs  get_id.rs  make_thing.rs  mock_test.rs  mod.rs  query_list.rs  response_format.rs
(+62 files in other folders)
