[package]
name = "najm-course-apis"
version = "0.1.0"
edition = "2021"

[dependencies]
najm-course-libs = { version = "0.1.0", path = "../najm-course-libs" }
najm-course-utils = { version = "0.1.0", path = "../najm-course-utils" }
najm-course-entities = { version = "0.1.0", path = "../najm-course-entities" }
axum.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
lazy_static.workspace = true
regex.workspace = true
validator.workspace = true
axum-test.workspace = true
surrealdb.workspace = true
rand.workspace = true
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
tower-http.workspace = true
utoipa-swagger-ui.workspace = true
log.workspace = true
