[package]
name = "najm-course-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
najm-course-entities = { path = "../najm-course-entities" }
surrealdb = { workspace = true, features = ["kv-mem"] }
argon2.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
lettre.workspace = true
